# TeoriaDosGrafos

./: CMakeLists.txt  README.md
dijkstra/: dijkstra.cpp  entrada.txt
ford-fulkerson/: entrada.txt  fulkerson.cpp
kruskal/: entrada.txt  kruskal.cpp
